...
      {
        text: 'Batal',
        style: 'cancel',
        onPress: onCancel,
      },
      {
        text: 'Ya',
        onPress: onConfirm,
      },
    ],
    { cancelable: true }
  );
};
...
